# primitives

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp  resources.qrc
assets/examples/: sigma.txt  z.txt
lib/canvas/: CMakeLists.txt  canvas.cpp  canvas.hpp
lib/engine/: CMakeLists.txt  TObjectContainer.cpp  TObjectContainer.hpp  TObjectFactory.cpp  TObjectFactory.hpp  TScene.cpp  TScene.hpp  object_container.cpp  object_container.hpp  object_containter.cpp  object_containter.hpp  object_factory.cpp  object_factory.hpp  scene.cpp  scene.hpp
lib/engine/figures/: AbstractObject.hpp  TEdge.cpp  TEdge.hpp  abstract_shape.hpp  drawable_iface.hpp  edge.cpp  edge.hpp  ellipse.cpp  ellipse.hpp  rectangle.cpp  rectangle.hpp  shapes.hpp  tag.hpp  triangle.cpp  triangle.hpp
lib/engine/policy/: AbstractPolicy.hpp  TCreatePolicy.cpp  TCreatePolicy.hpp  TDeletePolicy.cpp  TDeletePolicy.hpp  TJoinPolicy.cpp  TJoinPolicy.hpp  TMovePolicy.cpp  TMovePolicy.hpp
lib/figures/: CMakeLists.txt  abstract_shape.hpp  drawable_iface.hpp  edge.cpp  edge.hpp  ellipse.cpp  ellipse.hpp  figure_tag.hpp  rectangle.cpp  rectangle.hpp  triangle.hpp
lib/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lib/utils/: CMakeLists.txt  io.cpp  io.hpp  serialization.cpp  serialization.hpp
test/: CMakeLists.txt
